--- a/Untitled-2.html
+++ b/Untitled-2.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ZULU Restaurant</title>
-  <link rel="stylesheet" href="img/ss.css">
+  <link rel="stylesheet" href="ss.css">
   <link rel="icon" type="image/png" href="ZULU--0٢.png">
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -81,4 +81,5 @@
 
 </body>
 </html>
+
 
