--- a/style-ar.html
+++ b/style-ar.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>مطعم ZULU</title>
-  <link rel="stylesheet" href="img/style-ar.css">
+  <link rel="stylesheet" href="style-ar.css">
   <link rel="icon" type="image/png" href="img/ZULU--0٢.png">
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -85,3 +85,4 @@
 
 </body>
 </html>
+
