--- a/Untitled-2.html
+++ b/Untitled-2.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="ss.css">
   <link rel="icon" type="image/png" href="ZULU--0٢.png">
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 <body>
 
@@ -81,5 +83,6 @@
 
 </body>
 </html>
+
 
 
