--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" href="img/ZULU--0٢.png">
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 <body>
 
@@ -85,4 +87,5 @@
 
 </body>
 </html>
+
 
