--- a/index.html
+++ b/index.html
@@ -2,14 +2,24 @@
 <html lang="en" dir="ltr">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <!-- ✅ إصلاح عملية العرض للجوال والـ iPhone notch -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+
+  <!-- ✅ منع الكاش لضمان تحميل آخر تحديث دائماً -->
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+  <meta http-equiv="Pragma" content="no-cache" />
+  <meta http-equiv="Expires" content="0" />
+
   <title>ZULU Restaurant</title>
-  <link rel="stylesheet" href="style.css">
+
+  <!-- ✅ إجبار تحديث ملف CSS -->
+  <link rel="stylesheet" href="style.css?v=20">
+
   <link rel="icon" type="image/png" href="img/ZULU--0٢.png">
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&display=swap" rel="stylesheet">
-  
-
 </head>
+
 <body>
 
   <!-- Language Switch -->
@@ -52,7 +62,7 @@
   <section id="menu" class="menu">
     <h2>Menu</h2>
     <p>Browse our menu through the link below:</p>
-    <a href="https://app.zulu.com.sa/?fbclid=PAVERFWANXK2FleHRuA2FlbQIxMQABpwRTd1a5vv2IJ4EPY5hKJgMkYMkaZtRs-ZG9RPh82S77ZfbUVyTsmYXSNrKB_aem_r1LFZI9MWH5-K74JZKo6Fw#/app/dineout/restaurantcollection/zulu?fbclid=PAZXh0bgNhZW0CMTEAAacEU3dWub79iCeBD2OYSiYDJGDJGmbUbPmRvUT4fNku-2X21Fck7JmF0jaygQ_aem_r1LFZI9MWH5-K74JZKo6Fw"
+    <a href="https://app.zulu.com.sa/"
        target="_blank" class="btn">View Menu</a>
   </section>
 
@@ -87,6 +97,3 @@
 
 </body>
 </html>
-
-
-
