--- a/index.html
+++ b/index.html
@@ -2,22 +2,17 @@
 <html lang="en" dir="ltr">
 <head>
   <meta charset="UTF-8">
-  
-  <!-- ✅ إصلاح عملية العرض للجوال والـ iPhone notch -->
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-
-  <!-- ✅ منع الكاش لضمان تحميل آخر تحديث دائماً -->
-  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
-  <meta http-equiv="Pragma" content="no-cache" />
-  <meta http-equiv="Expires" content="0" />
-
   <title>ZULU Restaurant</title>
 
-  <!-- ✅ إجبار تحديث ملف CSS -->
-  <link rel="stylesheet" href="style.css?v=20">
-
-  <link rel="icon" type="image/png" href="img/ZULU--0٢.png">
+  <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&display=swap" rel="stylesheet">
+
+  <!-- Styles -->
+  <link rel="stylesheet" href="style.css">
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="img/ZULU--0٢.png">
 </head>
 
 <body>
@@ -31,7 +26,9 @@
   <!-- Header -->
   <header class="header">
     <img src="img/ZULU--0٢.png" alt="ZULU Logo" class="logo">
+
     <h1 class="welcome">Welcome to ZULU Restaurant</h1>
+
     <nav class="main-nav">
       <a href="#about">About</a>
       <a href="#menu">Menu</a>
@@ -52,9 +49,9 @@
   <section class="gallery">
     <h2>Our Atmosphere</h2>
     <div class="gallery-grid">
-      <img src="img/الرئيسيه.jpg" alt="Restaurant Photo">
-      <img src="img/الشرفه الداخليه.jpg" alt="Restaurant Photo">
-      <img src="img/المظللة.jpg" alt="Restaurant Photo">
+      <img src="img/الرئيسيه.jpg" alt="Restaurant Environment">
+      <img src="img/الشرفه الداخليه.jpg" alt="Restaurant Interior">
+      <img src="img/المظللة.jpg" alt="Private Dining Area">
     </div>
   </section>
 
@@ -62,20 +59,27 @@
   <section id="menu" class="menu">
     <h2>Menu</h2>
     <p>Browse our menu through the link below:</p>
+
     <a href="https://app.zulu.com.sa/"
-       target="_blank" class="btn">View Menu</a>
+       target="_blank" class="btn">
+       View Menu
+    </a>
   </section>
 
   <!-- Reservation Section -->
   <section id="reservation" class="reservation">
     <h2>Book Your Table</h2>
-    <p>You can easily reserve your table through Wddk.</p>
-    <a href="https://wddk.sa/" target="_blank" class="btn">Go to Reservation Page</a>
+    <p>Reserve your spot with ease through Wddk:</p>
+
+    <a href="https://wddk.sa/" target="_blank" class="btn">
+      Book Now
+    </a>
   </section>
 
   <!-- Contact Section -->
   <section id="contact" class="contact">
     <h2>Contact Us</h2>
+
     <div class="social-icons">
       <a href="https://www.tiktok.com/@zulu_sa_" target="_blank">
         <img src="img/social-media.png" alt="TikTok">
@@ -83,7 +87,7 @@
       <a href="https://www.instagram.com/zulu_sa_/" target="_blank">
         <img src="img/instagram.png" alt="Instagram">
       </a>
-      <a href="https://share.google/KpaJfPQxcu3L7SsPf" target="_blank">
+      <a href="https://maps.app.goo.gl/" target="_blank">
         <img src="img/location.png" alt="Location">
       </a>
     </div>
